Change the name of the cpp file from hw1 to cards.cpp

--- a/Pic10C Assignment1/Pic10C Assignment1.vcxproj.filters
+++ b/Pic10C Assignment1/Pic10C Assignment1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hw1.cpp">
+    <ClCompile Include="cards.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
