add another cpp file to store some suggested libraries plus a stub for the main routine.

--- a/Pic10C Assignment1/Pic10C Assignment1.vcxproj
+++ b/Pic10C Assignment1/Pic10C Assignment1.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cards.cpp" />
+    <ClCompile Include="siete_y_medio.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cards.h" />
