--- a/Pic10C Assignment1/Pic10C Assignment1.vcxproj.filters
+++ b/Pic10C Assignment1/Pic10C Assignment1.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="cards.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="siete_y_medio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cards.h">
